--- a/index.html
+++ b/index.html
@@ -19,14 +19,49 @@
 </nav>
 <section>
 
-	<div class="photo" style="background: url('img/02981_forestdawniv_1024x768.jpg');">
+	<div class="photo" style="background: url('img/DSC01217.jpg');">
 		<div class="description">
 			<h1> Photo<br>Stag Wildlife</h1>
 			Photography Nature
 		</div>
 	</div>
 
-	<div class="photo" style="background: url('img/03124_strbskeplesohightatras_1024x768.jpg');">
+	<div class="photo" style="background: url('img/DSC01409-4.jpg');">
+		<div class="description">
+			<h1> Photo<br>Stag Wildlife</h1>
+			Photography Nature
+		</div>
+	</div>
+
+	<div class="photo" style="background: url('img/DSC01829.jpg');">
+		<div class="description">
+			<h1> Photo<br>Stag Wildlife</h1>
+			Photography Nature
+		</div>
+	</div>
+
+	<div class="photo" style="background: url('img/DSC01859.jpg');">
+		<div class="description">
+			<h1> Photo<br>Stag Wildlife</h1>
+			Photography Nature
+		</div>
+	</div>s
+
+	<div class="photo" style="background: url('img/DSC02717.jpg');">
+		<div class="description">
+			<h1> Photo<br>Stag Wildlife</h1>
+			Photography Nature
+		</div>
+	</div>
+
+	<div class="photo" style="background: url('img/DSC09423.jpg');">
+		<div class="description">
+			<h1> Photo<br>Stag Wildlife</h1>
+			Photography Nature
+		</div>
+	</div>
+
+	<div class="photo" style="background: url('img/DSC09492.jpg');">
 		<div class="description">
 			<h1> Photo<br>Stag Wildlife</h1>
 			Photography Nature
