fixed back button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<h1> Photo<br>Stag Wildlife</h1>
 			Photography Nature
 		</div>
-	</div>s
+	</div>
 
 	<div class="photo" style="background: url('img/DSC02717.jpg');">
 		<div class="description">
